--- a/anon-core/pom.xml
+++ b/anon-core/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.anon</groupId>
 		<artifactId>anon-parent-pom</artifactId>
-		<relativePath>../anon-parent-pom/pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 		<version>1.2-SNAPSHOT</version>
 	</parent>
 
@@ -47,7 +47,7 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
-		</dependency>	
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
@@ -57,20 +57,27 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
-		</dependency>		
-		
+		</dependency>
+
+		<dependency>
+			<groupId>org.anon</groupId>
+			<artifactId>anon-test</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc14</artifactId>
-			<version>11.2.0.2.0</version>		
+			<version>11.2.0.2.0</version>
 			<scope>runtime</scope>
 		</dependency>
 
@@ -80,27 +87,27 @@
 			<version>7.07.ESD5</version>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.17</version>
 		</dependency>
-		
+
 		<!-- Licence management extension -->
 		<dependency>
 			<groupId>com.verhas</groupId>
 			<artifactId>license3j</artifactId>
 			<version>1.0.5</version>
 		</dependency>
-		
+
 		<!-- DB password encryption and licence management -->
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk15on</artifactId>
 			<version>1.50</version>
 		</dependency>
-		
+
 	</dependencies>
-	
+
 </project>
