--- a/anon-exec/pom.xml
+++ b/anon-exec/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.anon</groupId>
 		<artifactId>anon-parent-pom</artifactId>
-		<relativePath>../anon-parent-pom/pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 		<version>1.2-SNAPSHOT</version>
 	</parent>
 
@@ -20,7 +20,6 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -28,5 +27,12 @@
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.anon</groupId>
+			<artifactId>anon-test</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 </project>
