--- a/anon-service/pom.xml
+++ b/anon-service/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.anon</groupId>
 		<artifactId>anon-parent-pom</artifactId>
-		<relativePath>../anon-parent-pom/pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 		<version>1.2-SNAPSHOT</version>
 	</parent>
 
@@ -37,7 +37,6 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 		
