--- a/anon-exec/pom.xml
+++ b/anon-exec/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.anon</groupId>
 		<artifactId>anon-parent-pom</artifactId>
 		<relativePath>../pom.xml</relativePath>
-		<version>1.2</version>
+		<version>1.3-SNAPSHOT</version>
 	</parent>
 
 
