--- a/anon-gui/pom.xml
+++ b/anon-gui/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.anon</groupId>
 		<artifactId>anon-parent-pom</artifactId>
 		<relativePath>../pom.xml</relativePath>
-		<version>1.3</version>
+		<version>1.4-SNAPSHOT</version>
 	</parent>
 
 
