--- a/anon-exec/pom.xml
+++ b/anon-exec/pom.xml
@@ -28,6 +28,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.anon</groupId>
+			<artifactId>anon-service</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.anon</groupId>
 			<artifactId>anon-test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
