--- a/anon-test/src/main/resources/local.properties.sample
+++ b/anon-test/src/main/resources/local.properties.sample
@@ -12,3 +12,8 @@ mysql.test.url=jdbc:mysql://localhost:3306/anontest
 mysql.test.user=anontest
 mysql.test.passwd=anontest
 mysql.test.schema=anontest
+
+sqlserver.test.url=jdbc:sqlserver://localhost:1433
+sqlserver.test.user=sa
+sqlserver.test.passwd=secret
+sqlserver.test.schema=anon
