--- a/anon-test/pom.xml
+++ b/anon-test/pom.xml
@@ -73,6 +73,12 @@
 			<version>1.2.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>sqljdbc4</artifactId>
+			<version>4.0</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>com.github.markusbernhardt</groupId>
