--- a/anon-service/pom.xml
+++ b/anon-service/pom.xml
@@ -51,5 +51,12 @@
 			<artifactId>anon-persistence</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.anon</groupId>
+			<artifactId>anon-test</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
