fix the config and bootstrap management

--- a/anon-gui/pom.xml
+++ b/anon-gui/pom.xml
@@ -58,6 +58,10 @@
 							<include>anonlicense.txt</include>
 						</includes>
 					</resource>
+					<resource>
+						<directory>src/main/resources</directory>
+						<filtering>true</filtering>
+					</resource>
 				</resources>
 			</build>	       	        
 	        
