Support for jenkins integration tests

--- a/anon-test/src/main/resources/jenkins.test.properties
+++ b/anon-test/src/main/resources/jenkins.test.properties
@@ -10,7 +10,11 @@ oracle.test.user=ECAP
 oracle.test.passwd=ecap
 oracle.test.schema=ECAP
 
-mysql.test.url=jdbc:mysql://192.168.1.14:3306/anontest
+mysql.test.url=jdbc:mysql://192.168.1.14:3306
 mysql.test.user=anontest
 mysql.test.passwd=anontest
 mysql.test.schema=anontest
+mysql.inttest.schema=anontest
+mysql.inttest.table=scenario
+mysql.inttest.col=edited
+mysql.inttest.col.type=date
