redesign constraint management to distinguish for incoming and outgoing FK constraints

--- a/anon-test/src/main/resources/jenkins.test.properties
+++ b/anon-test/src/main/resources/jenkins.test.properties
@@ -18,3 +18,8 @@ mysql.inttest.schema=anontest
 mysql.inttest.table=scenario
 mysql.inttest.col=edited
 mysql.inttest.col.type=date
+
+mysql.available=true
+sybase.available=true
+oracle.available=true
+sqlserver.available=false
