pre-release fixes: set name

--- a/anon-core/src/main/resources/default.properties
+++ b/anon-core/src/main/resources/default.properties
@@ -1,4 +1,7 @@
 #The default properties file for spring
+#override these defaults in local.properties for tomcat or local.test.properties for unittests
 
-unused.property=value
 rmi.port=1199
+
+applicationinfo.name=Anonimecs
+
