fix the IntTest

--- a/anon-test/src/main/resources/jenkins.test.properties
+++ b/anon-test/src/main/resources/jenkins.test.properties
@@ -10,6 +10,7 @@ oracle.test.user=ECAP
 oracle.test.passwd=ecap
 oracle.test.schema=ECAP
 
+mysql.test.url.partial=192.168.1.14:3306
 mysql.test.url=jdbc:mysql://192.168.1.14:3306
 mysql.test.user=anontest
 mysql.test.passwd=anontest
