--- a/anon-gui-skin/pom.xml
+++ b/anon-gui-skin/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.anon</groupId>
 		<artifactId>anon-parent-pom</artifactId>
 		<relativePath>../pom.xml</relativePath>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.0</version>
 	</parent>
 	
 	<build>
