--- a/anon-test-integration/pom.xml
+++ b/anon-test-integration/pom.xml
@@ -82,6 +82,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.anon</groupId>
+			<artifactId>anon-enterprise-only</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.anon</groupId>
 			<artifactId>anon-test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
@@ -96,7 +101,7 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 	</dependencies>
 
 
