--- a/anon-gui/pom.xml
+++ b/anon-gui/pom.xml
@@ -247,6 +247,12 @@
 			<artifactId>rewrite-integration-faces</artifactId>
 			<version>2.0.12.Final</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>1.4.8</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
