--- a/anon-gui/pom.xml
+++ b/anon-gui/pom.xml
@@ -225,6 +225,11 @@
 			<artifactId>primefaces</artifactId>
 			<version>5.1</version>
 		</dependency>
+		<dependency>
+        	<groupId>org.primefaces.extensions</groupId>
+        	<artifactId>primefaces-extensions</artifactId>
+        	<version>3.0.0</version>
+    	</dependency>
 		
 		<dependency>
 			<groupId>org.atmosphere</groupId>
@@ -247,11 +252,25 @@
 			<artifactId>rewrite-integration-faces</artifactId>
 			<version>2.0.12.Final</version>
 		</dependency>
-		
+
 		<dependency>
-			<groupId>com.lowagie</groupId>
-			<artifactId>itext</artifactId>
-			<version>1.4.8</version>
+		    <groupId>com.lowagie</groupId>
+		    <artifactId>itext</artifactId>
+		    <version>2.1.7</version>
+		    <exclusions>
+		    	<exclusion>
+		            <groupId>bouncycastle</groupId>
+		            <artifactId>bcprov-jdk14</artifactId>
+		        </exclusion>
+		        <exclusion>
+		            <groupId>bouncycastle</groupId>
+		            <artifactId>bcmail-jdk14</artifactId>
+		        </exclusion>
+		        <exclusion>
+		            <groupId>org.bouncycastle</groupId>
+		            <artifactId>bctsp-jdk14</artifactId>
+		        </exclusion>
+		    </exclusions>
 		</dependency>
 
 		<dependency>
