--- a/anon-gui-skin/pom.xml
+++ b/anon-gui-skin/pom.xml
@@ -27,6 +27,14 @@
             </plugin>
         </plugins>
     </build>
+ 
+ 	<repositories>
+		<repository>
+			<id>prime-repo</id>
+			<name>Prime Repo</name>
+			<url>http://repository.primefaces.org</url>
+		</repository>
+	</repositories>
     
     <pluginRepositories>
    		<pluginRepository>
@@ -35,5 +43,14 @@
             <url>http://repository.primefaces.org</url>
 		</pluginRepository>
     </pluginRepositories>
+    
+    <dependencies>
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>sunny</artifactId>
+			<version>1.0.10</version>
+		</dependency>
+    
+    </dependencies>
 	
 </project>
