extract show_sql to properties and disable runall button

--- a/anon-core/src/main/resources/default.properties
+++ b/anon-core/src/main/resources/default.properties
@@ -2,6 +2,7 @@
 #override these defaults in local.properties for tomcat or local.test.properties for unittests
 
 rmi.port=1199
+hibernate.show_sql=false
 
 applicationinfo.name=Anonimecs
 
