--- a/anon-build/pom.xml
+++ b/anon-build/pom.xml
@@ -31,6 +31,51 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<id>unpack-tomcat</id>
+						<phase>process-sources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+                            	<artifactItem>
+                                	<groupId>org.apache</groupId>
+                          			<artifactId>tomcat</artifactId>
+                                    <version>${tomcat.version}</version>
+                                    <type>zip</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/</outputDirectory>
+                           		</artifactItem>
+                 			</artifactItems>
+						</configuration>
+					</execution>
+					<execution>
+						<id>unpack-derby</id>
+						<phase>process-sources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+                            	<artifactItem>
+                                	<groupId>org.apache</groupId>
+                          			<artifactId>derby</artifactId>
+                                    <version>${derby.version}</version>
+                                    <type>zip</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/</outputDirectory>
+                           		</artifactItem>
+                 			</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.5.1</version>
 
