--- a/anon-enterprise-only/pom.xml
+++ b/anon-enterprise-only/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.anon</groupId>
 		<artifactId>anon-parent-pom</artifactId>
 		<relativePath>../pom.xml</relativePath>
-		<version>2.1-SNAPSHOT</version>
+		<version>2.1</version>
 	</parent>
 
 	<build>
