--- a/anon-service/pom.xml
+++ b/anon-service/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.anon</groupId>
 		<artifactId>anon-parent-pom</artifactId>
 		<relativePath>../pom.xml</relativePath>
-		<version>2.1</version>
+		<version>2.2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
