--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.anon</groupId>
 	<artifactId>anon-parent-pom</artifactId>
-	<version>2.1</version>
+	<version>2.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -39,7 +39,7 @@
 		<connection>scm:git:git@github.com:anonimecs/anon-repo.git</connection>
 		<url>scm:git:git@github.com:anonimecs/anon-repo.git</url>
 		<developerConnection>scm:git:git@github.com:anonimecs/anon-repo.git</developerConnection>
-		<tag>anon-parent-pom-2.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<distributionManagement>
