--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.anon</groupId>
 	<artifactId>anon-parent-pom</artifactId>
-	<version>2.1</version>
+	<version>2.1.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
