--- a/anon-test/pom.xml
+++ b/anon-test/pom.xml
@@ -77,7 +77,7 @@
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>sqljdbc4</artifactId>
 			<version>4.0</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 
 <!-- 		<dependency> -->
