--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ before_install:
  - wget https://raw.githubusercontent.com/anonimecs/m2_repository/master/com/oracle/ojdbc14/11.2.0.2.0/ojdbc14-11.2.0.2.0.jar
  - wget https://raw.githubusercontent.com/anonimecs/m2_repository/master/com/oracle/ojdbc14/11.2.0.2.0/ojdbc14-11.2.0.2.0.pom
  - mvn install:install-file -Dfile=ojdbc14-11.2.0.2.0.jar -DpomFile=ojdbc14-11.2.0.2.0.pom
+ - wget https://raw.githubusercontent.com/anonimecs/m2_repository/master/sybase/jconn4/7.07.ESD5/jconn4-7.07.ESD5.jar
+ - wget https://raw.githubusercontent.com/anonimecs/m2_repository/master/sybase/jconn4/7.07.ESD5/jconn4-7.07.ESD5.pom
+ - mvn install:install-file -Dfile=jconn4-7.07.ESD5.jar -DpomFile=jconn4-7.07.ESD5.pom
+ - wget https://raw.githubusercontent.com/anonimecs/m2_repository/master/com/microsoft/sqlserver/sqljdbc4/4.0/sqljdbc4-4.0.pom
+ - wget https://raw.githubusercontent.com/anonimecs/m2_repository/master/com/microsoft/sqlserver/sqljdbc4/4.0/sqljdbc4-4.0.jar
+ - mvn install:install-file -Dfile=sqljdbc4-4.0.jar -DpomFile=sqljdbc4-4.0.pom
