--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ before_install:
  - wget https://raw.githubusercontent.com/anonimecs/m2_repository/master/com/microsoft/sqlserver/sqljdbc4/4.0/sqljdbc4-4.0.pom
  - wget https://raw.githubusercontent.com/anonimecs/m2_repository/master/com/microsoft/sqlserver/sqljdbc4/4.0/sqljdbc4-4.0.jar
  - mvn install:install-file -Dfile=sqljdbc4-4.0.jar -DpomFile=sqljdbc4-4.0.pom
- 
+ - wget http://apache.mirror.digionline.de/tomcat/tomcat-7/v7.0.65/bin/apache-tomcat-7.0.65.zip
+ - mvn install:install-file -Dfile=apache-tomcat-7.0.65.zip -DgroupId=org.apache -DartifactId=tomcat -Dversion=7.0.65 -Dpackaging=zip -DgeneratePom=true
 install: true
  
 script: 
